# video-knowledge

./: .gitignore  .symphony_mcp_config.json  DESIGN.md  IMPLEMENTATION_PLAN.md  WORKFLOW.md  build-sidecar.sh  bun.workspaces.json  drizzle.config.ts  opencode.json  package.json  tsconfig.base.json
apps/backend/: drizzle.config.ts  package.json  tsconfig.json
apps/backend/drizzle/: 0000_brief_dakota_north.sql
apps/backend/drizzle/meta/: 0000_snapshot.json  _journal.json
apps/backend/src/: index.ts  types.ts
apps/backend/src/db/: client.ts  index.ts  schema.ts
apps/backend/src/routes/: chat.ts  docker.ts  files.ts  health.ts  ingest.ts  search.ts  settings.ts  tags.ts  videos.ts
apps/backend/src/services/: chroma.ts  config.ts  docker.ts  download.ts  embedding.ts  llm.ts  openai-client.ts  pipeline.ts  rag.ts  stubs.ts  summarization.ts  tagger.ts  transcription.ts  vectorStore.ts
apps/desktop/: .gitignore  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  globals.css  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/components/: AddVideoDialog.tsx  AppLayout.tsx  AppSidebar.tsx  ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  CitationLink.tsx  IngestionProgress.tsx  Sidebar.tsx  SummaryPanel.tsx  TagEditor.tsx  TranscriptView.tsx  (+4 more)
docs/plans/: 2026-03-05-project-foundation-scaffolding.md
scripts/: build-sidecar.sh  dev.sh  setup.sh
(+40 files in other folders)
