[package]
name = "desktop"
version = "0.0.1"
description = "Tauri v2 desktop app"
edition = "2021"

[lib]
name = "desktop_lib"
path = "src/lib.rs"

[[bin]]
name = "desktop"
path = "src/main.rs"

[dependencies]
tauri = { version = "2" }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
